--- a/css/store.css
+++ b/css/store.css
@@ -671,6 +671,9 @@ section#main-body {
     border: 1px solid #ddd;
     box-shadow: none;
 }
+.landing-page.ssl .detailed-info div#collapseAllCerts .card-body {
+    padding: 0;
+}
 .landing-page.ssl .detailed-info .card-body h4 {
     margin: 20px 0;
     font-weight: 700;
@@ -713,8 +716,11 @@ section#main-body {
 }
 .landing-page.ssl ul.ssl-certs-all li {
     margin: 0;
-    padding: 25px 15px 15px;
+    padding: 15px 35px;
     border-bottom: 3px solid #f8f8f8;
+}
+.landing-page.ssl ul.ssl-certs-all li .row {
+    margin-top: 1em;
 }
 .landing-page.ssl ul.ssl-certs-all li.featured {
     background: #fff7cc;
@@ -725,6 +731,9 @@ section#main-body {
 }
 .landing-page.ssl ul.ssl-certs-all li h3 {
     font-weight: 300;
+}
+.landing-page.ssl ul.ssl-certs-all li h4 {
+    margin-top: 0 !important;
 }
 .landing-page.ssl ul.ssl-certs-all .padded-cell {
     padding-top: 30px;
@@ -835,22 +844,23 @@ section#main-body {
 }
 
 .landing-page.ssl .popular-plan {
-    margin-top:5px;
-    width:100%;
-    height:35px;
-    position:relative;
+    margin-top: 5px;
+    width: 100%;
+    height: 35px;
+    position: absolute;
+    bottom: -0.6rem;
+}
+.landing-page.ssl .popular-plan-wrapper {
+    position: relative;
+    padding-bottom: 1rem;
 }
 .landing-page.ssl .popular-plan .plan-container {
     text-align: center;
-    position:absolute;
-    height:35px;
-    top:0;
-    left:-5%;
-    width:110%;
-    background:url(../img/shadow-left.png) no-repeat left bottom;
-    background-size:100% auto;
-}
-.landing-page.ssl .popular-plan .plan-container:before {
+    position: absolute;
+    top: 0;
+    left: -10px;
+    width: calc(100% + 20px);
+    background-size: 100% auto;
 }
 .landing-page.ssl .popular-plan .plan-container .txt-container {
     padding:6px 0 0 0;
@@ -882,6 +892,23 @@ section#main-body {
     -webkit-box-shadow: -1px 10px 2px -7px rgba(0,0,0,0.18);
     -moz-box-shadow: -1px 10px 2px -7px rgba(0,0,0,0.18);
     box-shadow: -1px 10px 2px -7px rgba(0,0,0,0.18);
+}
+.landing-page.ssl .popular-plan .plan-container:before,
+.landing-page.ssl .popular-plan .plan-container:after {
+    content: "";
+    position: absolute;
+    display: block;
+    border-style: solid;
+    border-color: #823c0f transparent transparent transparent;
+    bottom: -10px;
+}
+.landing-page.ssl .popular-plan .plan-container:before {
+    left: 0;
+    border-width: 10px 0 0 10px;
+}
+.landing-page.ssl .popular-plan .plan-container:after {
+    right: 0;
+    border-width: 10px 10px 0 0;
 }
 @media (max-width: 767px) {
     .landing-page.ssl .certificate-options h3 {
