--- a/css/theme.css
+++ b/css/theme.css
@@ -10093,6 +10093,10 @@ span.caret {
   line-height: 0.8;
 }
 
+#personalInformation {
+  overflow: inherit;
+}
+
 .iradio_square-blue {
   margin-right: 6px;
 }
@@ -10390,6 +10394,10 @@ h6:hover .show-on-hover {
   box-shadow: none;
 }
 
+.pw-input {
+  height: initial;
+}
+
 .input-group .btn-reveal-pw {
   border-left: 0;
 }
@@ -10685,6 +10693,10 @@ fieldset[disabled] .btn-default.focus {
 
 .card-accent-asbestos {
   border-top: 3px solid #7f8c8d;
+}
+
+.card-accent-brand-cpanel-orange {
+  border-top: 3px solid #ff6c2c;
 }
 
 .bg-color-gold {
@@ -11296,6 +11308,87 @@ fieldset[disabled] .btn-default.focus {
 
 .carousel-inner .carousel-item.item {
   float: left;
+}
+
+.div-service-item {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.div-service-status {
+  text-align: center;
+}
+
+.div-service-status .label {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: white;
+  display: inline-block;
+  line-height: initial;
+  margin: 0;
+}
+
+.div-service-status .label-placeholder {
+  position: absolute;
+  visibility: hidden;
+}
+
+.div-service-status .label:not(.label-placeholder) {
+  width: 3rem;
+}
+
+.div-service-name {
+  flex: 1;
+  min-width: 0;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.div-service-name > span {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.div-service-buttons {
+  margin-left: auto;
+}
+
+.div-service-buttons .disabled {
+  cursor: default;
+}
+
+.div-service-buttons .dropdown-item {
+  font-size: 0.875rem;
+}
+
+.div-service-buttons .btn-group-secondary,
+.div-service-buttons .btn-view-details span:not(.sr-only) {
+  display: none;
+}
+
+.div-service-buttons .dropdown-toggle::after {
+  margin-left: 0;
+}
+
+@media (min-width: 768px) {
+  .div-service-status .label {
+    width: initial !important;
+  }
+  .div-service-buttons .btn-view-details i,
+  .div-service-buttons .btn-group-primary {
+    display: none;
+  }
+  .div-service-buttons .btn-group-secondary {
+    display: inline-flex;
+  }
+  .div-service-buttons .btn-view-details span:not(.sr-only):not(.caret) {
+    display: initial !important;
+  }
 }
 
 .twofa-setup .modal-body {
@@ -12043,6 +12136,18 @@ div.md-editor.active {
 
 .promo-banner.sitebuilder .btn {
   background-color: #ff3377;
+}
+
+.promo-banner.cpanelseo {
+  border-top: 3px solid #ff6c2c;
+}
+
+.promo-banner.cpanelseo a {
+  color: #ff6c2c;
+}
+
+.promo-banner.cpanelseo .btn {
+  background-color: #ff6c2c;
 }
 
 .mc-panel-promo {
