--- a/css/theme.css
+++ b/css/theme.css
@@ -1871,11 +1871,6 @@ pre code {
   opacity: 1;
 }
 
-.form-control:-ms-input-placeholder {
-  color: #6c757d;
-  opacity: 1;
-}
-
 .form-control::placeholder {
   color: #6c757d;
   opacity: 1;
@@ -2296,7 +2291,6 @@ textarea.form-control {
   vertical-align: middle;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
@@ -7435,21 +7429,18 @@ button.bg-dark:focus {
 .user-select-all {
   -webkit-user-select: all !important;
      -moz-user-select: all !important;
-      -ms-user-select: all !important;
           user-select: all !important;
 }
 
 .user-select-auto {
   -webkit-user-select: auto !important;
      -moz-user-select: auto !important;
-      -ms-user-select: auto !important;
           user-select: auto !important;
 }
 
 .user-select-none {
   -webkit-user-select: none !important;
      -moz-user-select: none !important;
-      -ms-user-select: none !important;
           user-select: none !important;
 }
 
@@ -7478,7 +7469,6 @@ button.bg-dark:focus {
 }
 
 .position-sticky {
-  position: -webkit-sticky !important;
   position: sticky !important;
 }
 
@@ -7498,9 +7488,8 @@ button.bg-dark:focus {
   z-index: 1030;
 }
 
-@supports ((position: -webkit-sticky) or (position: sticky)) {
+@supports (position: sticky) {
   .sticky-top {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
@@ -11310,6 +11299,31 @@ fieldset[disabled] .btn-default.focus {
   float: left;
 }
 
+div[menuitemname='Active Products/Services'] .list-group {
+  overflow: initial !important;
+  max-height: initial !important;
+  border-bottom: 0px !important;
+}
+
+div[menuitemname='Active Products/Services'] .list-group .list-group-item:nth-child(n+5) {
+  display: none;
+}
+
+div[menuitemname='Active Products/Services'] .card-footer {
+  border-top: 1px;
+  padding: 0.188rem 1.25rem;
+}
+
+div[menuitemname='Active Products/Services'] .btn-view-more {
+  font-size: 0.75rem;
+}
+
+div[menuitemname='Active Products/Services'] .btn-view-more.disabled {
+  cursor: default;
+  text-decoration: none;
+  color: #6c757d;
+}
+
 .div-service-item {
   display: flex;
   align-items: center;
@@ -12205,7 +12219,6 @@ div.md-editor.active {
 
 .btn-social {
   position: relative;
-  padding-left: 44px;
   text-align: left;
   white-space: nowrap;
   overflow: hidden;
@@ -12244,34 +12257,6 @@ div.md-editor.active {
 
 .btn-facebook.disabled, .btn-facebook[disabled], fieldset[disabled] .btn-facebook, .btn-facebook.disabled:hover, .btn-facebook[disabled]:hover, fieldset[disabled] .btn-facebook:hover, .btn-facebook.disabled:focus, .btn-facebook[disabled]:focus, fieldset[disabled] .btn-facebook:focus, .btn-facebook.disabled:active, .btn-facebook[disabled]:active, fieldset[disabled] .btn-facebook:active, .btn-facebook.disabled.active, .btn-facebook[disabled].active, fieldset[disabled] .btn-facebook.active {
   background-color: #4267b2;
-  border-color: rgba(0, 0, 0, 0.2);
-}
-
-.btn-google {
-  color: #000;
-  background-color: #fff;
-  border-color: rgba(0, 0, 0, 0.2);
-}
-
-.btn-google img {
-  margin-bottom: 2px;
-}
-
-.btn-social.btn-google {
-  padding-left: 41px;
-}
-
-.btn-google:hover, .btn-google:focus, .btn-google:active, .btn-google.active, .open .dropdown-toggle.btn-google {
-  color: #000;
-  border-color: rgba(0, 0, 0, 0.5);
-}
-
-.btn-google:active, .btn-google.active, .open .dropdown-toggle.btn-google {
-  background-image: none;
-}
-
-.btn-google.disabled, .btn-google[disabled], fieldset[disabled] .btn-google, .btn-google.disabled:hover, .btn-google-plus[disabled]:hover, fieldset[disabled] .btn-google-plus:hover, .btn-google-plus.disabled:focus, .btn-google-plus[disabled]:focus, fieldset[disabled] .btn-google-plus:focus, .btn-google-plus.disabled:active, .btn-google-plus[disabled]:active, fieldset[disabled] .btn-google-plus:active, .btn-google-plus.disabled.active, .btn-google-plus[disabled].active, fieldset[disabled] .btn-google-plus.active {
-  background-color: #eee;
   border-color: rgba(0, 0, 0, 0.2);
 }
 
