--- a/css/theme.css
+++ b/css/theme.css
@@ -10100,6 +10100,10 @@ fieldset[disabled] .btn-default.focus {
   border-top: 3px solid #ff6c2c;
 }
 
+.card-accent-brand-xovinow-blue {
+  border-top: 3px solid #10069F;
+}
+
 .bg-color-gold {
   background-color: #f0ad4e;
 }
@@ -11491,14 +11495,26 @@ div.md-editor.active {
   background-color: #ff3377;
 }
 
-.promo-banner.cpanelseo {
-  border-top: 3px solid #ff6c2c;
+.promo-banner.xovinow {
+  border-top: 3px solid #10069F;
 }
-.promo-banner.cpanelseo a {
-  color: #ff6c2c;
+.promo-banner.xovinow a {
+  color: #10069F;
 }
-.promo-banner.cpanelseo .btn {
-  background-color: #ff6c2c;
+.promo-banner.xovinow .btn {
+  background-color: #10069F;
+}
+
+.promo-banner.threesixtymonitoring {
+  border-top: 3px solid #ce3b56;
+}
+
+.promo-banner.threesixtymonitoring .btn {
+  background-color: #ce3b56;
+}
+
+.promo-banner.threesixtymonitoring a {
+  color: #ce3b56;
 }
 
 .mc-panel-promo {
@@ -11544,6 +11560,57 @@ div.md-editor.active {
 
 .panel-mc-sso small {
   display: block;
+}
+
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] {
+  border-top: solid 3px #ce3b56;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .card-body, .client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .mc-promo-manage .content, .mc-promo-manage .client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .content, .client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .mc-promo-login .content, .mc-promo-login .client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .content {
+  max-height: initial;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-metrics-row > div:not(:last-child) {
+  border-right: 1px solid #ccc;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-metric {
+  margin-top: 20px;
+  font-size: 40px;
+  line-height: 1;
+  color: #902a6d;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-title {
+  font-weight: bold;
+  color: #888;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-highlight {
+  margin-top: 4px;
+  height: 2px;
+  border-radius: 2px;
+  background-color: #902a6d;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-highlight-servers,
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-highlight-monitors,
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-highlight-alerts {
+  margin-top: 4px;
+  height: 2px;
+  border-radius: 2px;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-highlight-servers {
+  background-color: #902a6d;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-highlight-monitors {
+  background-color: #af3362;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .threesixtymonitoring-highlight-alerts {
+  background-color: #ce3b56;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] form,
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] small {
+  text-align: center;
+}
+.client-home-cards div[menuitemname=ThreesixtymonitoringLogin] .btn {
+  width: 100%;
 }
 
 .social-signin-btns {
