--- a/css/store.css
+++ b/css/store.css
@@ -3211,6 +3211,9 @@ section#main-body {
 .landing-page.threesixtymonitoring .section-features {
     padding: 7.5rem 0;
 }
+.landing-page.threesixtymonitoring .section-features .tab-content {
+    padding-bottom: 1rem;
+}
 .landing-page.threesixtymonitoring .section-notifications,
 .landing-page.threesixtymonitoring .section-monitoring,
 .landing-page.threesixtymonitoring .section-features .row-features {
@@ -3296,10 +3299,12 @@ section#main-body {
     margin-bottom: 0.25rem;
 }
 .landing-page.threesixtymonitoring .modal-results .div-results > div:nth-child(2) {
-    text-transform: uppercase;
     font-size: 1.25rem;
     font-weight: 600;
     margin-bottom: 0.75rem;
+}
+.landing-page.threesixtymonitoring .modal-results .div-results [data-metric="host_status"] {
+    text-transform: uppercase;
 }
 .landing-page.threesixtymonitoring .modal-results .row-legend i {
     margin: 0 1rem;
@@ -3543,6 +3548,7 @@ section#main-body {
 .landing-page.threesixtymonitoring .section-faq .fa-plus,
 .landing-page.threesixtymonitoring .section-faq .fa-minus {
     color: #2ea2e2;
+    cursor: pointer;
 }
 @media (min-width: 768px) {
     .landing-page.threesixtymonitoring .modal-results .row-legend i {
