--- a/css/theme.css
+++ b/css/theme.css
@@ -12340,6 +12340,18 @@ div.three-column-grid > div > label {
   cursor: pointer;
 }
 
+#payMethodList tr {
+  font-size: smaller;
+}
+
+#payMethodList tr td:nth-child(2),
+#payMethodList tr td:nth-child(3) {
+  max-width: 15em;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .iframe-input-container {
   height: 34px;
 }
